<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="gamesViewModel"
            type="com.example.pro.game.GamesViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <RelativeLayout
        android:id="@+id/main_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/linear_progress_indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="@{gamesViewModel.numQuestions}"
            android:progress="@{gamesViewModel.questionIndex}"
            app:indicatorDirectionLinear="leftToRight"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/scoreChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:textColor="@color/black"
            android:backgroundTint="#fffbc8"
            android:text="@{@string/score(gamesViewModel.score ?? 0)}"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/questionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/scoreChip"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp"
            android:text="@{gamesViewModel.currentQuestion.text}"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="29sp"
            tools:text="@string/question" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/optionRadioGroup"
            android:layout_below="@+id/questionText"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:layoutDirection="ltr">

            <RadioButton
                android:id="@+id/option1RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/option1"
                android:text="@{gamesViewModel.answers[0]}"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/option2RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/option2"
                android:text="@{gamesViewModel.answers[1]}"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/option3RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/option3"
                android:text="@{gamesViewModel.answers[2]}"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/option4RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#FFC107"
                tools:text="@string/option4"
                android:text="@{gamesViewModel.answers[3]}"
                android:textSize="20sp" />


        </RadioGroup>

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/optionRadioGroup"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:backgroundTint="#FF5722"
            android:text="@string/next" />

    </RelativeLayout>
    </ScrollView>
</layout>
